--- a/html-css-basics/index.html
+++ b/html-css-basics/index.html
@@ -74,6 +74,9 @@
           alt="bg"
           class="bgimg larger"
         />
+        <div class="button-container">
+          <div class="dyna-button">Early Access -></div>
+        </div>
       </main>
     </div>
   </body>
