[FEAT] Added player movement support

--- a/js-basics/index.html
+++ b/js-basics/index.html
@@ -10,21 +10,10 @@
   <body>
     <h1 class="title">A Game that Somehow Renders</h1>
     <div class="control-container">
-      <div class="variable-button">Start Game</div>
+      <div class="variable-button" id="btn-start-game">Start Game</div>
     </div>
     <div id="checkboard-container" class="checkboard-container">
-      <div class="checkboard-row">
-        <div class="checkboard-cell"></div>
-        <div class="checkboard-cell"></div>
-        <div class="checkboard-cell"></div>
-        <div class="checkboard-cell"></div>
-      </div>
-      <div class="checkboard-row">
-        <div class="checkboard-cell"></div>
-        <div class="checkboard-cell"></div>
-        <div class="checkboard-cell"></div>
-        <div class="checkboard-cell"></div>
-      </div>
+      Click the 'Start' button
     </div>
   </body>
   <script type="module" src="./src/main.ts"></script>
