[FEAT] Added countdown timer

--- a/js-basics/index.html
+++ b/js-basics/index.html
@@ -11,6 +11,10 @@
     <h1 class="title">A Game that Somehow Renders</h1>
     <div class="control-container">
       <div class="variable-button" id="btn-start-game">Start Game</div>
+      <div class="score-board">
+        <div class="countdown">Time: <span id="countdown-var">0</span>s</div>
+        <div class="score">Score: <span id="score-var">0</span></div>
+      </div>
     </div>
     <div id="checkboard-container" class="checkboard-container">
       Click the 'Start' button
