--- a/js-basics/index.html
+++ b/js-basics/index.html
@@ -8,16 +8,29 @@
     <title>A Game that Somehow Renders</title>
   </head>
   <body>
-    <h1 class="title">A Game that Somehow Renders</h1>
-    <div class="control-container">
-      <div class="variable-button" id="btn-start-game">Start Game</div>
-      <div class="score-board">
-        <div class="countdown">Time: <span id="countdown-var">0</span>s</div>
-        <div class="score">Score: <span id="score-var">0</span></div>
+    <div class="main-container">
+      <h1 class="title">A Game that Somehow Renders</h1>
+      <div class="control-container">
+        <div class="variable-button" id="btn-start-game">Start Game</div>
+        <div class="score-board">
+          <div class="countdown">Time: <span id="countdown-var">0</span>s</div>
+          <div class="score">Score: <span id="score-var">0</span></div>
+        </div>
+      </div>
+      <div id="checkboard-container" class="checkboard-container">
+        Click the 'Start' button
       </div>
     </div>
-    <div id="checkboard-container" class="checkboard-container">
-      Click the 'Start' button
+    <div id="modal-container" class="modal-container">
+      <div id="modal-endgame" class="modal-endgame">
+        <h2>Game Ended</h2>
+        <h3>Your Score</h3>
+        <div id="score-display">100</div>
+        <div class="endgame-btn-container">
+          <div id="endgame-btn" class="variable-button">Restart</div>
+        </div>
+      </div>
+      <div class="modal-help"></div>
     </div>
   </body>
   <script type="module" src="./src/main.ts"></script>
