[FEATURE] Added more cell types - bomb - buff - extra time

--- a/js-basics/index.html
+++ b/js-basics/index.html
@@ -21,7 +21,7 @@
         Click the 'Start' button
       </div>
     </div>
-    <div id="modal-container" class="modal-container">
+    <div id="modal-container" class="modal-container hidden">
       <div id="modal-endgame" class="modal-endgame">
         <h2>Game Ended</h2>
         <h3>Your Score</h3>
