--- a/responsive-page-design/index.html
+++ b/responsive-page-design/index.html
@@ -3,10 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.scss" />
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <nav class="navbar">
+      <div class="navbar-inner">
+        <div class="navbar-links">
+          <a class="navbar-links--brand" href="" id="navlink-brand"
+            ><img
+              src="https://lf-cdn-tos.bytescm.com/obj/static/webinfra/modern-js-website/assets/images/images/modernjs-logo.svg"
+              alt="Modernjs Logo"
+          /></a>
+          <a
+            class="navbar-links--item navbar-links--text hide-unless-large"
+            href=""
+            >开始</a
+          >
+          <a
+            class="navbar-links--item navbar-links--text hide-unless-large"
+            href=""
+            >指南</a
+          >
+          <a
+            class="navbar-links--item navbar-links--text hide-unless-large"
+            href=""
+            >API</a
+          >
+          <a
+            class="navbar-links--item navbar-links--text hide-unless-large"
+            href=""
+            >博客</a
+          >
+          <a
+            class="navbar-links--item navbar-links--text hide-unless-large"
+            href=""
+            >社区</a
+          >
+        </div>
+        <div class="navbar-search"></div>
+      </div>
+    </nav>
   </body>
 </html>
