added responsive swiper - Cannot finish assignment without js I'm sad

--- a/responsive-page-design/index.html
+++ b/responsive-page-design/index.html
@@ -105,5 +105,18 @@
         <a href="" class="header-buttons--btn btn-t2">文档</a>
       </div>
     </header>
+    <div class="swiper">
+      <div class="swiper-inner">
+        <div class="swiper-item">移动页面</div>
+        <div class="swiper-item">响应式网站</div>
+        <div class="swiper-item">中后台</div>
+        <div class="swiper-item">微前端</div>
+        <div class="swiper-item">桌面应用</div>
+        <div class="swiper-item">API服务</div>
+        <div class="swiper-item">工具库</div>
+        <div class="swiper-item">UI组件</div>
+      </div>
+    </div>
   </body>
+  <script src="main.js"></script>
 </html>
