updated swiper styles

--- a/responsive-page-design/index.html
+++ b/responsive-page-design/index.html
@@ -117,6 +117,7 @@
         <div class="swiper-item">UI组件</div>
       </div>
     </div>
+    <div>Hold</div>
   </body>
   <script src="main.js"></script>
 </html>
