Added section title

--- a/responsive-page-design/index.html
+++ b/responsive-page-design/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.scss" />
-    <title>Vite App</title>
+    <title>现 代 前 端</title>
   </head>
   <body>
     <nav class="navbar">
@@ -115,6 +115,17 @@
         <div class="swiper-item">API服务</div>
         <div class="swiper-item">工具库</div>
         <div class="swiper-item">UI组件</div>
+      </div>
+    </div>
+    <div class="features">
+      <div class="title-container">
+        <h2>支持现代 Web 开发范式</h2>
+        <div class="spinner-container">
+          <img class="spinner-img spinner" src="/img/seq-wrap.png" alt="">
+          <div class="title-sec-number">
+            01
+          </div>
+        </div>
       </div>
     </div>
     <div>Hold</div>
