--- a/responsive-page-design/index.html
+++ b/responsive-page-design/index.html
@@ -117,16 +117,187 @@
         <div class="swiper-item">UI组件</div>
       </div>
     </div>
-    <div class="features">
+    <div class="sec-features">
       <div class="title-container">
         <h2>支持现代 Web 开发范式</h2>
         <div class="spinner-container">
-          <img class="spinner-img spinner" src="/img/seq-wrap.png" alt="">
-          <div class="title-sec-number">
-            01
-          </div>
+          <img class="spinner-img spinner" src="/img/seq-wrap.png" alt="" />
+          <div class="title-sec-number">01</div>
         </div>
       </div>
+      <div class="card-list">
+        <a href="" class="wrap-card">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 100 125"
+            class="wrap-card--icon"
+          >
+            <path
+              d="M17.012.996c-4.394 0-8.008 3.65-8.008 8.008-4.394 0-8.008 3.614-8.008 8.008V90.96c0 4.393 3.614 8.043 8.008 8.043h73.984c4.394 0 8.008-3.614 8.008-8.008 4.358 0 8.008-3.614 8.008-8.008V9.04c0-4.393-3.614-8.043-8.008-8.043zm0 6.024h73.984c1.134 0 1.984.85 1.984 2.02v73.948c0 1.17-.815 2.02-1.984 2.02v-67.96c-1.063-5.387-4.04-7.973-8.008-8.044H14.992c.425-1.17.992-1.984 2.02-1.984zm-8.008 7.972h73.984c.992 0 2.02.992 2.02 2.055v11.941H6.984V17.012c.425-1.205.992-1.984 2.02-2.02zM14 18.004c-2.197 0-4.004 1.807-4.004 4.004 0 2.197 1.807 4.004 4.004 4.004 2.197 0 4.004-1.807 4.004-4.004 0-2.197-1.807-4.004-4.004-4.004zm12.012 0a4 4 0 00-4.004 4.004 4 4 0 004.004 4.004c2.197 0 3.968-1.807 3.968-4.004 0-2.197-1.771-4.004-3.968-4.004zM6.984 35.012h78.024V90.96c0 1.169-.85 2.055-2.02 2.055H9.004c-1.17 0-2.02-.886-2.02-2.055zm2.02 1.984V59h72V36.996h-72zm5.988 6.024H74.98v9.992H14.992zm-5.988 18v29.976h40.004V61.02H9.004zm41.988 0v29.976h30.012V61.02H50.992zm-36 5.988h27.992v18H14.992zm41.988 0h18v18h-18z"
+            ></path>
+          </svg>
+          <div class="wrap-card--content">客户端为中心的 Web 框架</div>
+        </a>
+        <a href="" class="wrap-card">
+          <svg
+            height="100"
+            width="100"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 -5 75 75"
+            class="wrap-card--icon"
+          >
+            <g fill-rule="evenodd">
+              <path
+                d="M2 58h56V2H2v56zm57 2H1a1 1 0 01-1-1V1a1 1 0 011-1h58a1 1 0 011 1v58a1 1 0 01-1 1z"
+              ></path>
+              <path
+                d="M46 55c-4.963 0-9-4.038-9-9a1 1 0 112 0c0 3.86 3.141 7 7 7s7-3.14 7-7-3.141-7-7-7c-4.963 0-9-4.038-9-9s4.037-9 9-9 9 4.038 9 9a1 1 0 11-2 0c0-3.86-3.141-7-7-7s-7 3.14-7 7 3.141 7 7 7c4.963 0 9 4.038 9 9s-4.037 9-9 9M25 55c-4.963 0-9-4.038-9-9a1 1 0 112 0c0 3.86 3.141 7 7 7s7-3.14 7-7V22a1 1 0 112 0v24c0 4.962-4.037 9-9 9"
+              ></path>
+            </g>
+          </svg>
+          <div class="wrap-card--content">
+            Anyscript 为中心、FP 优先的 GUI 软件研发技术栈
+          </div>
+        </a>
+        <a href="" class="wrap-card">
+          <svg
+            height="100"
+            width="100"
+            xmlns="http://www.w3.org/2000/svg"
+            data-name="Layer 1"
+            viewBox="0 0 512 512"
+            class="wrap-card--icon"
+          >
+            <path
+              d="M444.72 128.78h-3.52a16.45 16.45 0 00-14-25.21h-30.63a16.47 16.47 0 00-14-25.22H334.4c-1.94 0-48-.81-64.48 20.85-13.45 17.69-51.52 17.09-55.19 17V113a16.45 16.45 0 00-25.21-14v-8.3a16.47 16.47 0 00-25.22-14v-8.4a16.49 16.49 0 10-33 0v3.52a16.47 16.47 0 00-25.22 14v30.66a16.34 16.34 0 00-8.69-2.48 16.51 16.51 0 00-16.49 16.53v48.21c0 1.95-.81 48 20.85 64.48 18.47 14 17 54.89 17 55.47v1.83h-6.81a16.46 16.46 0 00-14 25.21h-8.3a16.45 16.45 0 00-14 25.22h-8.4a16.49 16.49 0 100 33h3.56a16.45 16.45 0 0014 25.21h30.67a16.47 16.47 0 0014 25.22H179c8.14 0 48-1 63.08-20.86 14-18.47 54.9-17 55.47-17h1.6V399a16.45 16.45 0 0025.21 14v8.3a16.47 16.47 0 0025.22 14v8.4a16.49 16.49 0 1033 0v-3.52a16.47 16.47 0 0025.22-14v-30.74a16.34 16.34 0 008.72 2.52A16.51 16.51 0 00433 381.47v-48.21c0-1.95.81-48-20.85-64.48-18.47-14-17-54.89-17-55.47v-1.13h4.93a16.46 16.46 0 0014-25.21h8.3a16.45 16.45 0 0014-25.21h8.4a16.49 16.49 0 000-33zm-127.07 83.4V216c-.55 12.36-3.34 46.44-9.5 55.53-8.7 12.81-9 33.21-9 34.11V319h-4.27c-12.36-.56-46.44-3.34-55.53-9.51-12.81-8.69-33.21-9-34.11-9h-9V296c.56-12.36 3.34-46.44 9.51-55.53 8.69-12.81 9-33.21 9-34.11v-12.68h2.39c12.36.55 46.44 3.33 55.53 9.5 12.81 8.69 33.21 9 34.11 9zm-191.17 86.67c.08-1.84 1.67-45.32-20-61.82-18.55-14.03-17.83-57.69-17.82-58.21v-48.29a8.73 8.73 0 1117.45 0v32a3.89 3.89 0 007.77 0V85.9a8.73 8.73 0 1117.45 0v68.62a3.88 3.88 0 007.76 0V68.41a8.73 8.73 0 1117.45 0v79.81a3.88 3.88 0 007.76 0V90.78a8.73 8.73 0 1117.46 0v64.05a3.88 3.88 0 007.76 0V113a8.73 8.73 0 0117.48 0v93.29c0 .19-.28 18.9-7.67 29.79-8.5 12.54-10.62 54.77-10.83 59.72v4.68h-62zm171.24 89.92c-1.84-.08-45.33-1.67-61.82 20-14.07 18.51-57.68 17.78-58.21 17.79h-48.3a8.73 8.73 0 010-17.46h32a3.88 3.88 0 100-7.76H84.76a8.73 8.73 0 010-17.45h68.63a3.88 3.88 0 100-7.76H67.28a8.73 8.73 0 110-17.45h79.8a3.88 3.88 0 100-7.76H89.64a8.73 8.73 0 010-17.46h64.05a3.88 3.88 0 000-7.76h-41.78a8.73 8.73 0 110-17.45h93.29c.19 0 18.9.28 29.79 7.67 12.54 8.5 54.77 10.62 59.72 10.83h4.44v62zm89.68-175.62c-.08 1.84-1.66 45.32 20 61.81 18.52 14.07 17.8 57.7 17.79 58.22v48.29a8.73 8.73 0 11-17.45 0v-32a3.89 3.89 0 00-7.77 0v76.63a8.73 8.73 0 11-17.45 0v-68.62a3.88 3.88 0 00-7.76 0v86.11a8.73 8.73 0 11-17.45 0v-79.81a3.88 3.88 0 00-7.76 0v57.44a8.73 8.73 0 11-17.45 0v-64.05a3.89 3.89 0 00-7.77 0V399a8.73 8.73 0 01-17.45 0v-93.33c0-.19.28-18.9 7.67-29.79 8.5-12.54 10.62-54.77 10.84-59.72v-4h62zM444.72 154h-79.8a3.88 3.88 0 100 7.76h57.44a8.73 8.73 0 010 17.45h-64.05a3.88 3.88 0 000 7.76h41.78a8.73 8.73 0 110 17.45H306.8c-.19 0-18.9-.27-29.79-7.66-12.54-8.51-54.77-10.62-59.72-10.84h-2.56V124h2.73c10.61 0 44.52-1.51 58.64-20.09s57.7-17.77 58.21-17.78h48.3a8.73 8.73 0 010 17.45h-32a3.88 3.88 0 100 7.76h76.66a8.73 8.73 0 010 17.45h-68.66a3.88 3.88 0 000 7.76h86.11a8.73 8.73 0 010 17.46z"
+            ></path>
+          </svg>
+          <div class="wrap-card--content">
+            从「前后端分离」到「前后端一体化」
+          </div>
+        </a>
+        <a href="" class="wrap-card">
+          <svg
+            height="100"
+            width="100"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 60 60"
+            class="wrap-card--icon"
+          >
+            <path
+              d="M18 16h-1a1 1 0 000 2h1a1 1 0 000-2zM37 38h6a1 1 0 000-2h-6a1 1 0 000 2zM18 26h-1a1 1 0 000 2h1a1 1 0 000-2zM37 26a1 1 0 000 2h6a1 1 0 000-2zM18 36h-1a1 1 0 000 2h1a1 1 0 000-2zM23 16h-1a1 1 0 000 2h1a1 1 0 000-2zM23 26h-1a1 1 0 000 2h1a1 1 0 000-2z"
+            ></path>
+            <path
+              d="M30 0a30 30 0 1030 30A30.034 30.034 0 0030 0zm0 2a27.889 27.889 0 0119.066 7.52L46.6 11.985A3.967 3.967 0 0044 11H16a4 4 0 00-4 4v4a3.974 3.974 0 001.382 3A3.974 3.974 0 0012 25v4a3.974 3.974 0 001.382 3A3.974 3.974 0 0012 35v4a3.991 3.991 0 003.624 3.962l-6.1 6.1A27.98 27.98 0 0130 2zm14 19h-3.586l3.292-3.292L46 15.414V19a2 2 0 01-2 2zm2 4v4a2 2 0 01-2 2H30.414l8-8H44a2 2 0 012 2zm0 10v4a2 2 0 01-2 2H20.414l8-8H44a2 2 0 012 2zM30 47a2 2 0 11-2 2 2 2 0 012-2zm-14-6a2 2 0 01-2-2v-4a2 2 0 012-2h9.586l-8 8zm-2-12v-4a2 2 0 012-2h19.586l-8 8H16a2 2 0 01-2-2zm0-10v-4a2 2 0 012-2h28a1.985 1.985 0 011.187.4l-2.6 2.6H37a1 1 0 000 2h3.586l-3 3H16a2 2 0 01-2-2zm16 39a27.889 27.889 0 01-19.066-7.52l7.48-7.48H29v2.142A3.991 3.991 0 0026.142 48H19a1 1 0 000 2h7.142a3.981 3.981 0 007.716 0H41a1 1 0 000-2h-7.142A3.991 3.991 0 0031 45.142V43h13a4 4 0 004-4v-4a3.974 3.974 0 00-1.382-3A3.974 3.974 0 0048 29v-4a3.974 3.974 0 00-1.382-3A3.974 3.974 0 0048 19v-4a3.971 3.971 0 00-.247-1.339l2.727-2.727A27.98 27.98 0 0130 58z"
+            ></path>
+          </svg>
+          <div class="wrap-card--content">Serverless 优先</div>
+        </a>
+        <a href="" class="wrap-card">
+          <svg
+            height="100"
+            width="100"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 100 100"
+            class="wrap-card--icon"
+          >
+            <path
+              d="M50.4 0L7.1 25v50l43.3 25 43.3-25V25L50.4 0zm39.2 26.1l-28 15.4L50.3 35 39 41.5 11.2 26.1 50.4 3.5l39.2 22.6zM50.3 61l-9.2-5.3 9.2-4.9 9.2 4.9-9.2 5.3zm10.3-7l-9.2-4.9V37.9l9.2 5.3V54zm-11.3-4.9L40.1 54V43.2l9.2-5.3v11.2zM10.1 27.8l28 15.4v13l.5.3 10.8 6.2.1 33.2-39.4-22.6V27.8zm41.3 68.1l-.1-33.2 10.8-6.2.5-.3v-13l28.1-15.4v45.4L51.4 95.9z"
+            ></path>
+          </svg>
+          <div class="wrap-card--content">对 Web 应用开发的充分抽象</div>
+        </a>
+        <a href="" class="wrap-card">
+          <svg
+            height="100"
+            width="100"
+            xmlns="http://www.w3.org/2000/svg"
+            data-name="Layer 1"
+            viewBox="0 0 100 100"
+            class="wrap-card--icon"
+          >
+            <path
+              d="M76.61 65.1l1.19-7.78a1.64 1.64 0 000-.23 4.28 4.28 0 00-4.28-4.27H63.07A5.74 5.74 0 0159.44 46a17.84 17.84 0 008.29-12.1c1.39-2.62 6.66-13.66.61-20.57-.46-.53-7.56-8.78-17.44-9.16-5.71-.17-11.13 2.24-16.1 7.3a13 13 0 00-5.45 7.72c-.79 3.6.19 7.47 2.87 11.51a17.87 17.87 0 008.55 15.21 5.77 5.77 0 01-3.62 6.91H26.33a4.28 4.28 0 00-4.27 4.27.86.86 0 000 .23l1.21 8a26.51 26.51 0 00-4.95 15.47v10.55a4.51 4.51 0 004.5 4.5h54.34a4.51 4.51 0 004.5-4.5V80.76c0-6.28-1.66-11.28-5.05-15.66zM32.28 19.87a10.06 10.06 0 014.23-5.93 1.54 1.54 0 00.32-.25C41.21 9.19 45.9 7 50.76 7.17c8.66.32 15.22 8 15.29 8.1 4.29 4.88.93 13.23-.54 16.3a4.58 4.58 0 01-.33-.46 1.62 1.62 0 00-.1-.18l-.23-.42c0-.08-.08-.18-.12-.27a4 4 0 01-.2-.46 3.24 3.24 0 01-.13-.33l-.16-.45c0-.13-.07-.26-.11-.39A5.44 5.44 0 0164 28c0-.14-.07-.28-.1-.42l-.12-.75-.06-.41c-.05-.4-.09-.82-.11-1.27a5.7 5.7 0 00-2.12-4.2 5.89 5.89 0 00-.71-.48l-.15-.08a5.7 5.7 0 00-.76-.34h-.12a6.93 6.93 0 00-.75-.2h-.12a4.54 4.54 0 00-.82-.07h-.18a6 6 0 00-.84.07c-7.09 1.21-18.69.51-18.8.5a1.5 1.5 0 00-1.59 1.63A15.18 15.18 0 0135.39 30l-.39-.57c-2.44-3.43-3.35-6.69-2.72-9.56zm3.33 14.21a1.73 1.73 0 00.46-.12h.06a1.73 1.73 0 00.41-.3c.14-.15 3.22-3.46 3.12-10.3 3.56.16 12 .37 17.82-.62a2.53 2.53 0 012.06.54 2.77 2.77 0 011 2v1.06l.06.56v.29c0 .09.05.36.08.54a2.74 2.74 0 01.05.28l.12.57a1.74 1.74 0 01.05.22c.07.27.13.53.21.78v.05c.07.24.15.47.23.7 0 .07.05.14.08.22s.12.34.19.5l.1.24.21.46c0 .07.07.14.1.22l.26.47.09.15c.12.2.24.39.37.58l.06.07c.11.15.23.3.34.43l.14.15q.15.16.3.3l.16.14a2.34 2.34 0 00.31.24l.17.12.08.06a14.85 14.85 0 01-6.87 8.93 1.26 1.26 0 00-.45.26 14.93 14.93 0 01-21.57-9.75zm8.32 13.38a17.76 17.76 0 0012.36 0 8.58 8.58 0 001.83 5.32h-16a8.58 8.58 0 001.81-5.32zm-17.6 8.36h47.21A1.28 1.28 0 0174.81 57l-4.37 28.71a.82.82 0 000 .22 1.27 1.27 0 01-1.27 1.28H30.73a1.27 1.27 0 01-1.27-1.28 1.64 1.64 0 000-.22L25.06 57a1.28 1.28 0 011.27-1.18zm-5 35.52V80.76A23.53 23.53 0 0124 69.86l2.47 16.2a4 4 0 00.21 1.15h-.79A2.78 2.78 0 0023.1 90v2.85h-.26a1.5 1.5 0 01-1.5-1.51zm4.76 1.5v-2.63H73v2.63zm52.56-1.5a1.5 1.5 0 01-1.5 1.5H76V90a2.78 2.78 0 00-2.76-2.78 4 4 0 00.22-1.15L76 69.44a22 22 0 012.71 11.32z"
+            ></path>
+            <circle cx="45.03" cy="28.31" r="2.43"></circle>
+            <circle cx="55.59" cy="28.31" r="2.43"></circle>
+            <path
+              d="M55.63 37.37a1.5 1.5 0 00-3 0 2.69 2.69 0 01-5.38 0 1.5 1.5 0 00-3 0 5.69 5.69 0 0011.38 0zM42.92 80.31a1.53 1.53 0 001.06.44A1.5 1.5 0 0045 78.19l-6.7-6.74 6.7-6.66a1.5 1.5 0 10-2.12-2.12l-7.72 7.72a1.51 1.51 0 000 2.12zM55.31 64.79L62 71.45l-6.74 6.74a1.5 1.5 0 001.06 2.56 1.49 1.49 0 001.06-.44l7.8-7.8a1.52 1.52 0 00.44-1.06 1.5 1.5 0 00-.44-1.06l-7.71-7.72a1.5 1.5 0 00-2.12 2.12zM46.37 82.64a1.61 1.61 0 00.48.08 1.5 1.5 0 001.42-1l6.56-19.41a1.5 1.5 0 10-2.84-1l-6.56 19.43a1.51 1.51 0 00.94 1.9z"
+            ></path>
+          </svg>
+          <div class="wrap-card--content">DX 和 UX 同时最大化</div>
+        </a>
+        <a href="" class="wrap-card">
+          <svg
+            height="100"
+            width="100"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 60 60"
+            class="wrap-card--icon"
+          >
+            <g fill-rule="nonzero">
+              <path
+                d="M.36 33.859A2 2 0 002 37h1.5c.345.609.518 1.3.5 2a4.038 4.038 0 01-.331 1.661 1.927 1.927 0 00.045 1.61c.25.5.706.866 1.249 1l.616.15a1.91 1.91 0 00-.689 1.469 1.883 1.883 0 001.064 1.71 1 1 0 00.437.1.206.206 0 01.145.351l-1 1a4.671 4.671 0 00.156 6.739A4.758 4.758 0 008.944 56h7.716a2.006 2.006 0 011.94 1.511l.429 1.73A1 1 0 0020 60h29a1 1 0 001-1V48.922a1.943 1.943 0 01.644-1.481A27 27 0 106.967 19.814a3.085 3.085 0 00.41 2.524 1.12 1.12 0 01-.012 1.278L.36 33.859zm8.693-12.613a1.092 1.092 0 01-.158-.9 25.005 25.005 0 1140.456 25.568h-.005a25.241 25.241 0 01-3.846 2.742 1 1 0 001 1.731c.513-.3 1-.633 1.5-.964V58H20.782l-.243-.979A4 4 0 0020.108 56h8.42a8.191 8.191 0 007.372-4.553 1 1 0 10-1.79-.894A6.2 6.2 0 0128.528 54H17c-.036 0-.066.017-.1.02-.081-.005-.158-.02-.24-.02H8.944a2.768 2.768 0 01-1.9-.678 2.669 2.669 0 01-.1-3.855l1-1a2.207 2.207 0 00-.882-3.667 1.907 1.907 0 00-.805-3.276l-.709-.172A6.05 6.05 0 006 39a6.165 6.165 0 00-.322-2h.082c.53.002 1.038.213 1.413.587l.12.12a1 1 0 001.414-1.414l-.12-.12A4.026 4.026 0 005.76 35H4l-2-.005 7.012-10.244a3.112 3.112 0 00.558-1.78 3.19 3.19 0 00-.517-1.725z"
+              ></path>
+              <path
+                d="M30 33h8a3 3 0 003-3v-8a3 3 0 00-3-3h-8a3 3 0 00-3 3v8a3 3 0 003 3zm-1-11a1 1 0 011-1h8a1 1 0 011 1v8a1 1 0 01-1 1h-8a1 1 0 01-1-1v-8z"
+              ></path>
+              <path
+                d="M19 33a1 1 0 000 2h3.142A3.991 3.991 0 0025 37.858V41a1 1 0 002 0v-3h2v3a1 1 0 002 0v-3h2v3a1 1 0 002 0v-3h2v3a1 1 0 002 0v-3h2v3a1 1 0 002 0v-3.142A3.991 3.991 0 0045.858 35H49a1 1 0 000-2h-3v-2h3a1 1 0 000-2h-3v-2h3a1 1 0 000-2h-3v-2h3a1 1 0 000-2h-3v-2h3a1 1 0 000-2h-3.142A3.991 3.991 0 0043 14.142V11a1 1 0 00-2 0v3h-2v-3a1 1 0 00-2 0v3h-2v-3a1 1 0 00-2 0v3h-2v-3a1 1 0 00-2 0v3h-2v-3a1 1 0 00-2 0v3.142A3.991 3.991 0 0022.142 17H19a1 1 0 000 2h3v2h-3a1 1 0 000 2h3v2h-3a1 1 0 000 2h3v2h-3a1 1 0 000 2h3v2h-3zm7-17h16a2 2 0 012 2v16a2 2 0 01-2 2H26a2 2 0 01-2-2V18a2 2 0 012-2z"
+              ></path>
+              <path
+                d="M32 25h1a1 1 0 000-2h-1a1 1 0 000 2zM35 29h1a1 1 0 000-2h-1a1 1 0 000 2z"
+              ></path>
+            </g>
+          </svg>
+          <div class="wrap-card--content">智能化</div>
+        </a>
+        <a href="" class="wrap-card">
+          <svg
+            height="100"
+            width="100"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 128 128"
+            data-name="Layer 2"
+            class="wrap-card--icon"
+          >
+            <path
+              d="M81.285 19.766a1.75 1.75 0 000 3.5 19.476 19.476 0 0119.454 19.453 1.75 1.75 0 103.5 0 22.98 22.98 0 00-22.954-22.953z"
+            ></path>
+            <path
+              d="M114.073 36.255a33.409 33.409 0 00-53.636-19.648 22.853 22.853 0 00-37.4 17.645v.159h-.16a22.875 22.875 0 000 45.75H50.75V91.2l-9.036 9.036a8.089 8.089 0 102.474 2.475l9.549-9.549a1.75 1.75 0 00.513-1.237V80.16h8v22.614a8.062 8.062 0 103.5 0V80.16h8v11.766a1.75 1.75 0 00.513 1.237l9.549 9.549a8.088 8.088 0 102.474-2.475L77.25 91.2V80.16h27.875a22.862 22.862 0 008.948-43.905zm-76.681 75.34a4.563 4.563 0 114.563-4.562 4.568 4.568 0 01-4.562 4.562zm31.17-.955A4.562 4.562 0 1164 106.077a4.568 4.568 0 014.562 4.563zm26.607-3.607a4.563 4.563 0 11-4.562-4.562 4.568 4.568 0 014.563 4.561zm9.955-30.372H22.875a19.375 19.375 0 010-38.75c.572 0 1.177.03 1.847.094a1.75 1.75 0 001.906-1.909 19.184 19.184 0 01-.094-1.843 19.354 19.354 0 0132.671-14.066 1.752 1.752 0 002.356.044A29.908 29.908 0 01110.8 37.8a1.751 1.751 0 001.112 1.354 19.363 19.363 0 01-6.784 37.5z"
+            ></path>
+            <path
+              d="M106.875 85.553a8.063 8.063 0 108.062 8.063 8.072 8.072 0 00-8.062-8.063zm0 12.625a4.563 4.563 0 114.562-4.562 4.568 4.568 0 01-4.562 4.562zM21.125 85.553a8.063 8.063 0 108.062 8.063 8.072 8.072 0 00-8.062-8.063zm0 12.625a4.563 4.563 0 114.562-4.562 4.568 4.568 0 01-4.562 4.562z"
+            ></path>
+          </svg>
+          <div class="wrap-card--content">平台化</div>
+        </a>
+        <a href="" class="wrap-card">
+          <svg
+            height="100"
+            width="100"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 64 64"
+            class="wrap-card--icon"
+          >
+            <path
+              d="M39.841 34.75H58a.75.75 0 00.75-.75V22a.75.75 0 00-.75-.75h-1.613V18a.75.75 0 00-.75-.75h-4.728a.75.75 0 00-.75.75v3.25H48.11V18a.75.75 0 00-.75-.75h-2.61V10a.75.75 0 00-.75-.75h-1.613V6a.75.75 0 00-.75-.75h-4.728a.75.75 0 00-.75.75v3.25h-2.046V6a.75.75 0 00-.75-.75h-4.727a.75.75 0 00-.75.75v3.25H25.84V6a.75.75 0 00-.75-.75h-4.728a.75.75 0 00-.75.75v3.25H18a.75.75 0 00-.75.75v12c0 .414.336.75.75.75h13.25v10.5h-2.046V30a.75.75 0 00-.75-.75h-4.727a.75.75 0 00-.75.75v3.25h-2.046V30a.75.75 0 00-.75-.75h-4.728a.75.75 0 00-.75.75v3.25H13.09a.75.75 0 00-.75.75v7.25H8.363a.75.75 0 00-.75.75v3.25H6a.75.75 0 00-.75.75v12c0 .414.336.75.75.75h52a.75.75 0 00.75-.75V46a.75.75 0 00-.75-.75h-1.613V42a.75.75 0 00-.75-.75h-4.728a.75.75 0 00-.75.75v3.25h-2.046V42a.75.75 0 00-.75-.75h-4.727a.75.75 0 00-.75.75v3.25H39.84v-10.5zm11.818-16h3.228v2.5h-3.228v-2.5zm-5.049 0v2.5h-1.86v-2.5h1.86zm-8.951-12h3.228v2.5h-3.228v-2.5zm-8.272 0h3.227v2.5h-3.227v-2.5zm-8.274 0h3.228v2.5h-3.228v-2.5zm-2.363 4h24.5v10.5h-24.5v-10.5zm14 12h24.5v10.5h-24.5v-10.5zm-8.272 8h3.227v2.5h-3.227v-2.5zm-8.274 0h3.228v2.5h-3.228v-2.5zm-2.363 4h24.5v10.5h-24.5v-10.5zm-4.728 8h3.228v2.5H9.113v-2.5zm-2.363 4h24.5v10.5H6.75v-10.5zm50.5 10.5h-24.5v-10.5h24.5v10.5zm-5.591-14.5h3.228v2.5h-3.228v-2.5zm-8.272 0h3.227v2.5h-3.227v-2.5z"
+            ></path>
+          </svg>
+          <div class="wrap-card--content">低码化</div>
+        </a>
+      </div>
+    </div>
+    <div class="sec-mwa">
+      <div class="title-container">
+        <h2>现代 Web 应用 (MWA)</h2>
+        <div class="spinner-container">
+          <img class="spinner-img spinner" src="/img/seq-wrap.png" alt="" />
+          <div class="title-sec-number">02</div>
+        </div>
+      </div>
+      <div class="pigeon">摸了</div>
     </div>
     <div>Hold</div>
   </body>
