--- a/responsive-page-design/index.html
+++ b/responsive-page-design/index.html
@@ -297,7 +297,148 @@
           <div class="title-sec-number">02</div>
         </div>
       </div>
-      <h3 class="subsec-title">前后端一体化</h3>
+      <div class="subsec-frontbackend">
+        <h3 class="subsec-title">前后端一体化</h3>
+        <div class="card-container">
+          <a href="" class="transparent-card">
+            <svg
+              height="48"
+              width="48"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 64 64"
+              class="transparent-card--icon"
+            >
+              <path
+                d="M30 30v12h32V30H30zm30 10H32v-8h28v8zM30 56h15v4H2v2h60v-2H47v-4h15V44H30v12zm2-10h28v8H32v-8z"
+              ></path>
+              <path
+                d="M56 35h2v2h-2zM52 35h2v2h-2zM48 35h2v2h-2zM56 49h2v2h-2zM52 49h2v2h-2zM48 49h2v2h-2zM24 46c1.4 0 2.7-.1 4-.4v-3c-1.1.9-2.4 1.4-4 1.4h-.6c-3.1-.3-5.5-3-7.1-6.8 3.9-1.1 7.8-1.4 11.7-.8v-2c-4.1-.6-8.3-.3-12.4.9-1-3.1-1.5-6.6-1.6-10.2h20c0 1-.1 2-.2 3h2c.1-1 .1-2 .2-3h8c-.1 1-.2 2-.4 3h2.1c.2-1.3.4-2.6.4-4 0-12.1-9.9-22-22-22S2 11.9 2 24s9.9 22 22 22zm-9.6-8.3c.8 2 1.8 3.8 3 5.1-2.4-.8-4.6-2-6.4-3.7 1.1-.5 2.3-1 3.4-1.4zM14 23c.1-3.7.6-7.3 1.6-10.2 2.8.8 5.6 1.2 8.4 1.2s5.6-.4 8.4-1.2c1 3.1 1.5 6.6 1.6 10.2H14zm29.9 0h-8c-.1-3.7-.6-7.5-1.7-10.8 1.4-.5 2.8-1.1 4.3-1.8 3.2 3.3 5.2 7.7 5.4 12.6zM37 8.9c-1.1.5-2.3 1-3.4 1.4-.8-2-1.8-3.8-3-5.1 2.4.8 4.6 2 6.4 3.7zM24 4h.6c3.1.3 5.5 3 7.1 6.8-5.1 1.4-10.3 1.4-15.4 0 .1-.3.2-.6.4-.9C17.9 7.3 20.2 4 24 4zm-6.6 1.1c-1 1.1-1.8 2.4-2.6 4-.2.4-.3.7-.5 1.1-1.1-.4-2.3-.9-3.4-1.4C12.8 7.2 15 6 17.4 5.1zm-8 5.2c1.4.7 2.8 1.3 4.3 1.8-1 3.2-1.6 6.9-1.7 10.8H4c.3-4.8 2.3-9.2 5.4-12.6zM12.1 25c.1 3.7.6 7.5 1.7 10.8-1.4.5-2.8 1.1-4.3 1.8-3.2-3.3-5.2-7.7-5.4-12.6h8z"
+              ></path>
+            </svg>
+            <div class="transparent-card--content">自带 Web Server</div>
+          </a>
+          <a href="" class="transparent-card">
+            <svg
+              height="48"
+              width="48"
+              xmlns="http://www.w3.org/2000/svg"
+              data-name="Layer 2"
+              viewBox="0 0 32 32"
+              class="transparent-card--icon"
+            >
+              <path
+                d="M28.14 1.5H3.86A2.36 2.36 0 001.5 3.86v17.28a2.36 2.36 0 002.36 2.36h9.64v4H11a1.5 1.5 0 000 3h10a1.5 1.5 0 000-3h-2.5v-4h9.64a2.36 2.36 0 002.36-2.36V3.86a2.36 2.36 0 00-2.36-2.36zm-24.28 1h24.28a1.36 1.36 0 011.36 1.36V18.5h-27V3.86A1.36 1.36 0 013.86 2.5zM21 28.5a.5.5 0 010 1H11a.5.5 0 010-1h10zm-3.5-1h-3v-4h3zm10.64-5H3.86a1.36 1.36 0 01-1.36-1.36V19.5h27v1.64a1.36 1.36 0 01-1.36 1.36z"
+              ></path>
+              <circle cx="16" cy="21" r="0.71"></circle>
+              <path
+                d="M5.5 14.5A.5.5 0 006 14v-3.5h3V14a.5.5 0 001 0V7a.5.5 0 00-1 0v2.5H6V7a.5.5 0 00-1 0v7a.5.5 0 00.5.5zM11.5 7.5H13V14a.5.5 0 001 0V7.5h1.5a.5.5 0 000-1h-4a.5.5 0 000 1zM17.5 14.5a.5.5 0 00.5-.5V8.21l1.15 1.14a.48.48 0 00.7 0L21 8.21V14a.5.5 0 001 0V7a.5.5 0 00-.31-.46.47.47 0 00-.54.11L19.5 8.29l-1.65-1.64a.47.47 0 00-.54-.11A.5.5 0 0017 7v7a.5.5 0 00.5.5zM23.5 14.5h3a.5.5 0 000-1H24V7a.5.5 0 00-1 0v7a.5.5 0 00.5.5z"
+              ></path>
+            </svg>
+            <div class="transparent-card--content">一体化 SSR/SPR/SSG</div>
+          </a>
+          <a href="" class="transparent-card">
+            <svg
+              height="48"
+              width="48"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 48 48"
+              class="transparent-card--icon"
+            >
+              <g data-name="Coding Backend">
+                <path
+                  d="M45 8H15a3 3 0 00-3 3v34a3 3 0 003 3h30a3 3 0 003-3V11a3 3 0 00-3-3zm-20 3a1 1 0 010 2 1 1 0 010-2zm-4 0a1 1 0 010 2 1 1 0 010-2zm-4 0a1 1 0 010 2 1 1 0 010-2zm29 34a1 1 0 01-1 1H15a1 1 0 01-1-1V16h32z"
+                ></path>
+                <path
+                  d="M33 0H3a3 3 0 00-3 3v34a3 3 0 003 3h7v-2H3a1 1 0 01-1-1V10h8.1a4.92 4.92 0 01.9-2H2V3a1 1 0 011-1h30a1 1 0 011 1v3h2V3a3 3 0 00-3-3z"
+                ></path>
+                <path
+                  d="M6 5a1 1 0 01-2 0 1 1 0 012 0zM10 5a1 1 0 01-2 0 1 1 0 012 0zM14 5a1 1 0 01-2 0 1 1 0 012 0zM18 19a1 1 0 01-2 0 1 1 0 012 0zM25 20h-4a1 1 0 010-2h4a1 1 0 010 2zM40 24h-4a1 1 0 010-2h4a1 1 0 010 2zM18 23a1 1 0 01-2 0 1 1 0 012 0zM32 24H21a1 1 0 010-2h11a1 1 0 010 2zM35 32H25a1 1 0 010-2h10a1 1 0 010 2zM22 27a1 1 0 01-2 0 1 1 0 012 0zM37 28H25a1 1 0 010-2h12a1 1 0 010 2zM22 31a1 1 0 01-2 0 1 1 0 012 0zM9 15H5a1 1 0 010-2h4a1 1 0 010 2zM9 19H5a1 1 0 010-2h4a1 1 0 010 2zM9 23H5a1 1 0 010-2h4a1 1 0 010 2zM9 27H5a1 1 0 010-2h4a1 1 0 010 2zM9 31H5a1 1 0 010-2h4a1 1 0 010 2zM9 35H5a1 1 0 010-2h4a1 1 0 010 2zM28.05 41.68l2-6a1 1 0 011.9.64l-2 6a1 1 0 01-1.9-.64zM34 42a1 1 0 01-.71-1.71l1.3-1.29-1.3-1.29a1 1 0 011.42-1.42l2 2a1 1 0 010 1.42C34.53 41.89 34.54 42 34 42zM26 42c-.54 0-.57-.15-2.71-2.29a1 1 0 010-1.42l2-2a1 1 0 011.42 1.42L25.41 39l1.3 1.29A1 1 0 0126 42z"
+                ></path>
+              </g>
+            </svg>
+            <div class="transparent-card--content">一体化 BFF</div>
+          </a>
+          <a href="" class="transparent-card">
+            <svg
+              height="48"
+              width="48"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 60 60"
+              class="transparent-card--icon"
+            >
+              <path
+                d="M57 17H37a3 3 0 00-3 3v4a2.981 2.981 0 00.78 2 2.969 2.969 0 00-.757 1.775L26 20.555V19a2.981 2.981 0 00-.78-2 2.981 2.981 0 00.78-2v-4a2.981 2.981 0 00-.78-2A2.981 2.981 0 0026 7V3a3 3 0 00-3-3H3a3 3 0 00-3 3v4a2.981 2.981 0 00.78 2A2.981 2.981 0 000 11v4a2.981 2.981 0 00.78 2A2.981 2.981 0 000 19v4a3 3 0 003 3h20a2.994 2.994 0 002.977-2.775L33.505 30l-7.528 6.775A2.994 2.994 0 0023 34H3a3 3 0 00-3 3v4a2.981 2.981 0 00.78 2A2.981 2.981 0 000 45v4a2.981 2.981 0 00.78 2A2.981 2.981 0 000 53v4a3 3 0 003 3h20a3 3 0 003-3v-4a2.981 2.981 0 00-.78-2 2.981 2.981 0 00.78-2v-4a2.981 2.981 0 00-.78-2 2.981 2.981 0 00.78-2v-1.555l8.023-7.22A2.969 2.969 0 0034.78 34a2.981 2.981 0 00-.78 2v4a3 3 0 003 3h20a3 3 0 003-3v-4a2.981 2.981 0 00-.78-2 2.981 2.981 0 00.78-2v-4a2.981 2.981 0 00-.78-2 2.981 2.981 0 00.78-2v-4a3 3 0 00-3-3zM2 15v-4a1 1 0 011-1h20a1 1 0 011 1v4a1 1 0 01-1 1H3a1 1 0 01-1-1zM2 3a1 1 0 011-1h20a1 1 0 011 1v4a1 1 0 01-1 1H3a1 1 0 01-1-1zm22 20a1 1 0 01-1 1H3a1 1 0 01-1-1v-4a1 1 0 011-1h20a1 1 0 011 1zM2 37a1 1 0 011-1h20a1 1 0 011 1v4a1 1 0 01-1 1H3a1 1 0 01-1-1zm22 8v4a1 1 0 01-1 1H3a1 1 0 01-1-1v-4a1 1 0 011-1h20a1 1 0 011 1zm0 12a1 1 0 01-1 1H3a1 1 0 01-1-1v-4a1 1 0 011-1h20a1 1 0 011 1zm12-37a1 1 0 011-1h20a1 1 0 011 1v4a1 1 0 01-1 1H37a1 1 0 01-1-1zm22 8v4a1 1 0 01-1 1H37a1 1 0 01-1-1v-4a1 1 0 011-1h20a1 1 0 011 1zm0 12a1 1 0 01-1 1H37a1 1 0 01-1-1v-4a1 1 0 011-1h20a1 1 0 011 1z"
+              ></path>
+              <path
+                d="M6 54H5a1 1 0 000 2h1a1 1 0 000-2zM11 54h-1a1 1 0 000 2h1a1 1 0 000-2zM21 54h-3a1 1 0 000 2h3a1 1 0 000-2zM5 48h1a1 1 0 000-2H5a1 1 0 000 2zM10 48h1a1 1 0 000-2h-1a1 1 0 000 2zM18 48h3a1 1 0 000-2h-3a1 1 0 000 2zM5 40h1a1 1 0 000-2H5a1 1 0 000 2zM10 40h1a1 1 0 000-2h-1a1 1 0 000 2zM18 40h3a1 1 0 000-2h-3a1 1 0 000 2zM40 37h-1a1 1 0 000 2h1a1 1 0 000-2zM45 37h-1a1 1 0 000 2h1a1 1 0 000-2zM55 37h-3a1 1 0 000 2h3a1 1 0 000-2zM39 31h1a1 1 0 000-2h-1a1 1 0 000 2zM44 31h1a1 1 0 000-2h-1a1 1 0 000 2zM52 31h3a1 1 0 000-2h-3a1 1 0 000 2zM39 23h1a1 1 0 000-2h-1a1 1 0 000 2zM44 23h1a1 1 0 000-2h-1a1 1 0 000 2zM52 23h3a1 1 0 000-2h-3a1 1 0 000 2zM6 20H5a1 1 0 000 2h1a1 1 0 000-2zM11 20h-1a1 1 0 000 2h1a1 1 0 000-2zM21 20h-3a1 1 0 000 2h3a1 1 0 000-2zM6 12H5a1 1 0 000 2h1a1 1 0 000-2zM11 12h-1a1 1 0 000 2h1a1 1 0 000-2zM21 12h-3a1 1 0 000 2h3a1 1 0 000-2zM5 6h1a1 1 0 000-2H5a1 1 0 000 2zM10 6h1a1 1 0 000-2h-1a1 1 0 000 2zM18 6h3a1 1 0 000-2h-3a1 1 0 000 2z"
+              ></path>
+            </svg>
+            <div class="transparent-card--content">为 Serverless 优化</div>
+          </a>
+          <a href="" class="transparent-card">
+            <svg
+              height="48"
+              width="48"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 48 48"
+              class="transparent-card--icon"
+            >
+              <path
+                d="M42 29H25v-2a1 1 0 00-2 0v2H6a1 1 0 00-1 1v5a1 1 0 002 0v-4h16v4a1 1 0 002 0v-4h16v4a1 1 0 002 0v-5a1 1 0 00-1-1z"
+              ></path>
+              <path
+                d="M0 35v12a1 1 0 001 1h10a1 1 0 001-1V35a1 1 0 00-1-1H1a1 1 0 00-1 1zm9 11H3a1 1 0 010-2h6a1 1 0 010 2zm0-4H3a1 1 0 010-2h6a1 1 0 010 2zm0-4H3a1 1 0 010-2h6a1 1 0 010 2zM18 35v12a1 1 0 001 1h10a1 1 0 001-1V35a1 1 0 00-1-1H19a1 1 0 00-1 1zm9 11h-6a1 1 0 010-2h6a1 1 0 010 2zm0-4h-6a1 1 0 010-2h6a1 1 0 010 2zm0-4h-6a1 1 0 010-2h6a1 1 0 010 2zM36 35v12a1 1 0 001 1h10a1 1 0 001-1V35a1 1 0 00-1-1H37a1 1 0 00-1 1zm9 11h-6a1 1 0 010-2h6a1 1 0 010 2zm0-4h-6a1 1 0 010-2h6a1 1 0 010 2zm0-4h-6a1 1 0 010-2h6a1 1 0 010 2zM15 5a1 1 0 01-2 0 1 1 0 012 0zM19 5a1 1 0 01-2 0 1 1 0 012 0z"
+              ></path>
+              <path
+                d="M36 0H12a3 3 0 00-3 3v18a3 3 0 003 3h24a3 3 0 003-3V3a3 3 0 00-3-3zM12 2h24a1 1 0 011 1v5H11V3a1 1 0 011-1zm24 20H12a1 1 0 01-1-1V10h26v11a1 1 0 01-1 1z"
+              ></path>
+              <path
+                d="M34 6h-8a1 1 0 010-2h8a1 1 0 010 2zM22.05 18.68l2-6a1 1 0 011.9.64l-2 6a1 1 0 01-1.9-.64zM28 19a1 1 0 01-.71-1.71l1.3-1.29-1.3-1.29a1 1 0 011.42-1.42l2 2a1 1 0 010 1.42C28.53 18.89 28.54 19 28 19zM20 19c-.54 0-.57-.15-2.71-2.29a1 1 0 010-1.42l2-2a1 1 0 011.42 1.42L19.41 16l1.3 1.29A1 1 0 0120 19z"
+              ></path>
+            </svg>
+            <div class="transparent-card--content">多框架</div>
+          </a>
+          <a href="" class="transparent-card">
+            <svg
+              height="48"
+              width="48"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 100 100"
+              class="transparent-card--icon"
+            >
+              <path
+                d="M5273.1 2400.1v-2c0-2.8-5-4-9.7-4s-9.7 1.3-9.7 4v2c0 1.8.7 3.6 2 4.9l5 4.9c.3.3.4.6.4 1v6.4c0 .4.2.7.6.8l2.9.9c.5.1 1-.2 1-.8v-7.2c0-.4.2-.7.4-1l5.1-5c1.3-1.3 2-3.1 2-4.9zm-9.7-.1c-4.8 0-7.4-1.3-7.5-1.8.1-.5 2.7-1.8 7.5-1.8s7.3 1.3 7.5 1.8c-.2.5-2.7 1.8-7.5 1.8z"
+              ></path>
+              <path
+                d="M5268.4 2410.3c-.6 0-1 .4-1 1s.4 1 1 1h4.3c.6 0 1-.4 1-1s-.4-1-1-1h-4.3zM5272.7 2413.7h-4.3c-.6 0-1 .4-1 1s.4 1 1 1h4.3c.6 0 1-.4 1-1s-.4-1-1-1zM5272.7 2417h-4.3c-.6 0-1 .4-1 1s.4 1 1 1h4.3c.6 0 1-.4 1-1 0-.5-.4-1-1-1z"
+              ></path>
+              <g>
+                <path
+                  d="M75.8 75.9c0 .2-.2.4-.4.4H10.7c-.2 0-.5-.2-.5-.4V33.5h57.4l14.9-14.9c-1.1-1.6-2.9-2.7-5-2.7h-69c-3.3 0-6 2.7-6 6v56.2c0 3.3 2.7 6 6 6h69.1c3.3 0 6-2.7 6-6V52.9l-7.8 7.8v15.2zM28.1 22.1c1.4 0 2.6 1.1 2.6 2.6 0 1.4-1.2 2.6-2.6 2.6-1.4 0-2.6-1.1-2.6-2.6s1.2-2.6 2.6-2.6zm-7.8 0c1.4 0 2.6 1.1 2.6 2.6 0 1.4-1.2 2.6-2.6 2.6-1.4 0-2.6-1.1-2.6-2.6s1.1-2.6 2.6-2.6zm-7.9 0c1.4 0 2.6 1.1 2.6 2.6 0 1.4-1.2 2.6-2.6 2.6s-2.6-1.1-2.6-2.6 1.2-2.6 2.6-2.6z"
+                ></path>
+                <path
+                  d="M44.4 57.8c.5 0 .9-.4.9-.9V53c0-.5-.4-.9-.9-.9h-2c-.2-.9-.6-1.7-1-2.4l1.4-1.4c.4-.3.4-.9 0-1.3L40 44.3c-.3-.4-.9-.4-1.3 0l-1.4 1.4c-.8-.4-1.6-.8-2.4-1v-2c0-.5-.4-.9-.9-.9h-3.9c-.5 0-.9.4-.9.9v2c-.9.2-1.7.6-2.4 1l-1.4-1.4c-.3-.4-.9-.4-1.3 0L21.4 47c-.4.3-.4.9 0 1.3l1.4 1.4c-.4.8-.8 1.6-1 2.4h-2c-.5 0-.9.4-.9.9v3.9c0 .5.4.9.9.9h2c.2.9.6 1.7 1 2.4l-1.4 1.4c-.4.3-.4.9 0 1.3l2.7 2.7c.3.4.9.4 1.3 0l1.4-1.4c.8.4 1.6.8 2.4 1v2c0 .5.4.9.9.9H34c.5 0 .9-.4.9-.9v-2c.9-.2 1.7-.6 2.4-1l1.4 1.4c.3.4.9.4 1.3 0l2.7-2.7c.4-.3.4-.9 0-1.3l-1.4-1.4c.4-.8.8-1.6 1-2.4h2.1zM32.1 60c-2.8 0-5-2.2-5-5s2.2-5 5-5 5 2.2 5 5c0 2.7-2.2 5-5 5zM60.448 49.507l20.081-20.081 8.839 8.839-20.082 20.081zM52.3 64.2c-.3 1.3.9 2.6 2.2 2.2l8-1.8c.3-.1.7-.3.9-.5l2.1-2.1-8.8-8.8-2.1 2.1c-.2.3-.4.6-.5.9l-1.8 8zM97 28.1l-6.2-6.2c-.7-.7-1.9-.7-2.7 0l-3.8 3.8 8.8 8.8 3.8-3.8c.8-.7.8-1.9.1-2.6z"
+                ></path>
+              </g>
+            </svg>
+            <div class="transparent-card--content">定制 Web Server</div>
+          </a>
+          <a href="" class="transparent-card">
+            <svg
+              height="48"
+              width="48"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 53.3 49.4"
+              class="transparent-card--icon"
+            >
+              <path
+                d="M41.6 17.4c.1-.8.2-1.5.2-2.3 0-8.3-6.7-15-15-15s-15 6.7-15 15c0 .8.1 1.5.2 2.2C5.1 19.2 0 25.5 0 33c0 9 7.3 16.4 16.4 16.4 3.9 0 7.5-1.4 10.3-3.6 2.8 2.3 6.4 3.6 10.3 3.6 9 0 16.4-7.3 16.4-16.4-.1-7.4-5-13.6-11.8-15.6zM13.8 15c0-7.2 5.8-13 13-13s13 5.8 13 13c0 .6-.1 1.3-.2 1.9-.9-.2-1.8-.3-2.8-.3-3.9 0-7.5 1.4-10.3 3.6-2.8-2.3-6.4-3.6-10.3-3.6-.8 0-1.7.1-2.5.2.1-.5.1-1.1.1-1.8zm17 18c0 3.9-1.6 7.5-4.1 10-2.5-2.6-4.1-6.1-4.1-10 0-1.2.2-2.4.4-3.5 1.2.3 2.5.5 3.8.5 1.2 0 2.4-.2 3.5-.4.3 1.1.5 2.3.5 3.4zm-4-4.9c-1.1 0-2.2-.2-3.2-.4.7-1.8 1.8-3.3 3.1-4.7 1.3 1.3 2.4 3 3.1 4.7-1 .2-2 .4-3 .4zM21.7 27c-3.5-1.5-6.2-4.5-7.4-8.2.7-.1 1.4-.2 2-.2 3.3 0 6.3 1.1 8.8 3-1.4 1.6-2.6 3.4-3.4 5.4zm6.4-5.3c2.4-1.9 5.5-3 8.8-3 .8 0 1.6.1 2.4.2-1.2 3.8-4 6.8-7.6 8.3-.9-2.1-2.1-4-3.6-5.5zM2 33c0-6.5 4.4-12 10.4-13.8 1.3 4.4 4.5 8 8.7 9.7-.3 1.3-.5 2.7-.5 4.1 0 4.4 1.8 8.4 4.6 11.4-2.4 1.9-5.5 3-8.8 3C8.4 47.4 2 41 2 33zm34.9 14.4c-3.3 0-6.3-1.1-8.8-3 2.9-2.9 4.6-7 4.6-11.4 0-1.4-.2-2.7-.5-4 4.3-1.7 7.6-5.3 9-9.7C47 21.1 51.3 26.6 51.3 33c0 8-6.5 14.4-14.4 14.4z"
+              ></path>
+            </svg>
+            <div class="transparent-card--content">三位一体</div>
+          </a>
+        </div>
+      </div>
       <div class="pigeon">摸了</div>
     </div>
     <div>Hold</div>
