--- a/responsive-page-design/index.html
+++ b/responsive-page-design/index.html
@@ -448,24 +448,16 @@
             <div class="footer-head">食用指南</div>
             <ul class="footer-list">
               <li class="footer-list-item">
-                <a href="" class="footer-list-item--link">
-                  快速上手
-                </a>
+                <a href="" class="footer-list-item--link"> 快速上手 </a>
               </li>
               <li class="footer-list-item">
-                <a href="" class="footer-list-item--link">
-                  实战教程
-                </a>
+                <a href="" class="footer-list-item--link"> 实战教程 </a>
               </li>
               <li class="footer-list-item">
-                <a href="" class="footer-list-item--link">
-                  更多用法
-                </a>
+                <a href="" class="footer-list-item--link"> 更多用法 </a>
               </li>
               <li class="footer-list-item">
-                <a href="" class="footer-list-item--link">
-                  专题详解
-                </a>
+                <a href="" class="footer-list-item--link"> 专题详解 </a>
               </li>
             </ul>
           </div>
@@ -473,30 +465,91 @@
             <div class="footer-head">API 资料</div>
             <ul class="footer-list">
               <li class="footer-list-item">
-                <a href="" class="footer-list-item--link">
-                  命令
-                </a>
+                <a href="" class="footer-list-item--link"> 命令 </a>
               </li>
               <li class="footer-list-item">
-                <a href="" class="footer-list-item--link">
-                  运行时
-                </a>
+                <a href="" class="footer-list-item--link"> 运行时 </a>
               </li>
               <li class="footer-list-item">
-                <a href="" class="footer-list-item--link">
-                  文件约定
-                </a>
+                <a href="" class="footer-list-item--link"> 文件约定 </a>
               </li>
               <li class="footer-list-item">
-                <a href="" class="footer-list-item--link">
-                  配置选项
-                </a>
+                <a href="" class="footer-list-item--link"> 配置选项 </a>
               </li>
             </ul>
           </div>
           <div class="footer-grid-container">
-            <div class="footer-head"></div>
-            <div class="footer-grid"></div>
+            <div class="footer-head">关注我们</div>
+            <div class="footer-grid">
+              <div class="footer-grid--item">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  aria-hidden="true"
+                  role="img"
+                  width="32"
+                  height="32"
+                  preserveAspectRatio="xMidYMid meet"
+                  viewBox="0 0 256 256"
+                >
+                  <path
+                    fill="#9e9e9e"
+                    d="m85.6 153.4l67.9-67.8a12 12 0 0 1 16.9 16.9l-67.9 67.9a12 12 0 0 1-16.9 0a12 12 0 0 1 0-17Zm50.9 17l-28.3 28.3a36 36 0 0 1-50.9-50.9l28.3-28.3a12 12 0 0 0 0-17a12.2 12.2 0 0 0-17 0l-28.3 28.3a60 60 0 0 0 84.9 84.9l28.2-28.3a12 12 0 0 0 0-17a11.9 11.9 0 0 0-16.9 0Zm79.2-130.1a60.1 60.1 0 0 0-84.9 0l-28.3 28.3a12.2 12.2 0 0 0 0 17a12 12 0 0 0 17 0l28.3-28.3a36 36 0 1 1 50.9 50.9l-28.3 28.3a12.1 12.1 0 0 0 8.5 20.5a11.7 11.7 0 0 0 8.5-3.6l28.3-28.2a60 60 0 0 0 0-84.9Z"
+                  ></path>
+                </svg>
+              </div>
+              <div class="footer-grid--item">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  aria-hidden="true"
+                  role="img"
+                  width="32"
+                  height="32"
+                  preserveAspectRatio="xMidYMid meet"
+                  viewBox="0 0 256 256"
+                >
+                  <path
+                    fill="#9e9e9e"
+                    d="m85.6 153.4l67.9-67.8a12 12 0 0 1 16.9 16.9l-67.9 67.9a12 12 0 0 1-16.9 0a12 12 0 0 1 0-17Zm50.9 17l-28.3 28.3a36 36 0 0 1-50.9-50.9l28.3-28.3a12 12 0 0 0 0-17a12.2 12.2 0 0 0-17 0l-28.3 28.3a60 60 0 0 0 84.9 84.9l28.2-28.3a12 12 0 0 0 0-17a11.9 11.9 0 0 0-16.9 0Zm79.2-130.1a60.1 60.1 0 0 0-84.9 0l-28.3 28.3a12.2 12.2 0 0 0 0 17a12 12 0 0 0 17 0l28.3-28.3a36 36 0 1 1 50.9 50.9l-28.3 28.3a12.1 12.1 0 0 0 8.5 20.5a11.7 11.7 0 0 0 8.5-3.6l28.3-28.2a60 60 0 0 0 0-84.9Z"
+                  ></path>
+                </svg>
+              </div>
+              <div class="footer-grid--item">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  aria-hidden="true"
+                  role="img"
+                  width="32"
+                  height="32"
+                  preserveAspectRatio="xMidYMid meet"
+                  viewBox="0 0 256 256"
+                >
+                  <path
+                    fill="#9e9e9e"
+                    d="m85.6 153.4l67.9-67.8a12 12 0 0 1 16.9 16.9l-67.9 67.9a12 12 0 0 1-16.9 0a12 12 0 0 1 0-17Zm50.9 17l-28.3 28.3a36 36 0 0 1-50.9-50.9l28.3-28.3a12 12 0 0 0 0-17a12.2 12.2 0 0 0-17 0l-28.3 28.3a60 60 0 0 0 84.9 84.9l28.2-28.3a12 12 0 0 0 0-17a11.9 11.9 0 0 0-16.9 0Zm79.2-130.1a60.1 60.1 0 0 0-84.9 0l-28.3 28.3a12.2 12.2 0 0 0 0 17a12 12 0 0 0 17 0l28.3-28.3a36 36 0 1 1 50.9 50.9l-28.3 28.3a12.1 12.1 0 0 0 8.5 20.5a11.7 11.7 0 0 0 8.5-3.6l28.3-28.2a60 60 0 0 0 0-84.9Z"
+                  ></path>
+                </svg>
+              </div>
+              <div class="footer-grid--item">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  aria-hidden="true"
+                  role="img"
+                  width="32"
+                  height="32"
+                  preserveAspectRatio="xMidYMid meet"
+                  viewBox="0 0 256 256"
+                >
+                  <path
+                    fill="#9e9e9e"
+                    d="m85.6 153.4l67.9-67.8a12 12 0 0 1 16.9 16.9l-67.9 67.9a12 12 0 0 1-16.9 0a12 12 0 0 1 0-17Zm50.9 17l-28.3 28.3a36 36 0 0 1-50.9-50.9l28.3-28.3a12 12 0 0 0 0-17a12.2 12.2 0 0 0-17 0l-28.3 28.3a60 60 0 0 0 84.9 84.9l28.2-28.3a12 12 0 0 0 0-17a11.9 11.9 0 0 0-16.9 0Zm79.2-130.1a60.1 60.1 0 0 0-84.9 0l-28.3 28.3a12.2 12.2 0 0 0 0 17a12 12 0 0 0 17 0l28.3-28.3a36 36 0 1 1 50.9 50.9l-28.3 28.3a12.1 12.1 0 0 0 8.5 20.5a11.7 11.7 0 0 0 8.5-3.6l28.3-28.2a60 60 0 0 0 0-84.9Z"
+                  ></path>
+                </svg>
+              </div>
+            </div>
           </div>
         </div>
       </div>
